--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,6 +38,16 @@ body {
   color: var(--color-default);
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        /* Hides the spinner for Firefox */
+        input[type="number"] {
+            -moz-appearance: textfield;}
+
 a {
   color: var(--color-primary);
   text-decoration: none;
